<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.secretsanta.ExplainRules">


    <!-- layout for the text -->
    <TextView
        android:id="@+id/howtotitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_title"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/howtotext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_text"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:fontFamily="serif-monospace"
        app:layout_constraintTop_toBottomOf="@id/howtotitle"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/backbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CB4335"
        android:fontFamily="monospace"
        android:onClick="goBack"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
