<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.android.secretsanta.MainActivity">


    <!-- layout for the welcome text on main screen -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="17dp" />

    <!-- layout for the start button on main screen -->
    <Button
        android:id="@+id/startbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CB4335"
        android:fontFamily="monospace"
        android:onClick="takeNames"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!-- layout for the how to button on main screen -->
    <Button
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#3F51B5"
        android:fontFamily="monospace"
        android:onClick="showInfo"
        android:text="@string/how"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/startbutton"
        app:layout_constraintLeft_toLeftOf="parent" />

    <!-- layout for the image main screen -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:srcCompat="@drawable/secretsanta" />

</android.support.constraint.ConstraintLayout>
